<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:theme="@android:style/ThemeOverlay.Material.Dark"
            tools:targetApi="lollipop">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/upload_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Cancelar"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:maxLines="1"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <!--<ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/logo2"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>-->

            </LinearLayout>

            <LinearLayout
                android:id="@+id/upload_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/proximo"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/selected_video_cover"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:layout_margin="16dp"
                android:scaleType="fitXY"/>

            <EditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_margin="12dp"
                android:background="@color/colorAccent"
                android:hint="@string/titulo"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_margin="12dp"
                android:background="@color/colorAccent"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:layout_margin="12dp"
                android:background="@color/colorAccent"
                android:gravity="start"
                android:hint="@string/escribe_una_descripcion"
                android:padding="8dp"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>